--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ autopep8==1.6.0
 backports.zoneinfo==0.2.1
 certifi==2022.6.15
 charset-normalizer==2.1.0
+dj-database-url==1.0.0
 Django==4.1
 gunicorn==20.1.0
 idna==3.3
@@ -14,3 +15,4 @@ sqlparse==0.4.2
 stripe==4.0.2
 toml==0.10.2
 urllib3==1.26.11
+whitenoise==6.2.0
