--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,12 @@ charset-normalizer==2.1.0
 dj-database-url==1.0.0
 Django==4.1
 gunicorn==20.1.0
+heroku==0.1.4
 idna==3.3
 Pillow==9.2.0
 psycopg2-binary==2.9.3
 pycodestyle==2.9.1
+python-dateutil==1.5
 requests==2.28.1
 sqlparse==0.4.2
 stripe==4.0.2
